Fix footer styles on mobile

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -48,8 +48,9 @@
         order: -1;
         width: 90px;
         border-radius: 80px;
-        position: relative;
+        position: absolute;
         padding-bottom: 5px;
+        margin: -55px 0 0 0;
 
         @include tablet {
             order: 0;
